Modal dialog fixes: (a) scroll when necessary and (b) set maximum height so modal does not overflow viewing window.

--- a/static/style/blue/base.css
+++ b/static/style/blue/base.css
@@ -756,6 +756,7 @@ pre{overflow:auto;word-wrap:normal;white-space:pre}
 .btn.active,.btn:active{color:inherit}
 .dropdown-menu{max-width:auto}
 input[type="checkbox"],input[type="radio"]{margin-left:0.5ex;margin-right:0.5ex}
+.modal-body{overflow:auto}
 .nav-tabs{margin-bottom:15px}
 a{text-decoration:underline}
 label{font-weight:normal}
